src/styles/global.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    font-size: 62.5%;
    /* cores primitivas */
    --color-white: #fefdfb;
    --color-gray-100: #ECEFF2;
    --color-gray-600: #516778;
    --color-gray-700: #314158;
    --color-gray-950: #22292F;
    --color-gray-black: #1b1c1e;
    --color-light-purple: #EADDFF;
    --color-medium-purple: #9E77ED;
    --color-dark-purple: #4F378A;
    --color-green-100: #dcfce7;
    --color-green-400: #4ade80;
    --color-green-500: #22c55e;
    --color-green-900: #14532d;
    --color-red-100: #fee2e2;
    --color-red-400: #f87171;
    --color-red-500: #ef4444;
    --color-red-900: #451a1a;

    /* cores semânticas */
    /* tema claro - padrão */
    --background: var(--color-white);
    --main-text: var(--color-gray-950);
    --secondary-text: var(--color-gray-600);
    --inverted-text: var(--color-white);
    --primary-color: var(--color-medium-purple);
    --secondary-color: var(--color-light-purple);
    --standard-border: var(--color-gray-100);
    --bg-income: var(--color-green-100);
    --text-income: var(--color-green-500);
    --bg-expense: var(--color-red-100);
    --text-expense: var(--color-red-500);
}

/* tema escuro */
[data-theme="dark"] {
    --background: var(--color-gray-950);
    --main-text: var(--color-white);
    --secondary-text: var(--color-gray-100);
    --inverted-text: var(--color-gray-950);
    --primary-color: var(--color-medium-purple);
    --secondary-color: var(--color-dark-purple);
    --standard-border: var(--color-gray-700);
    --bg-income: var(--color-green-900);
    --text-income: var(--color-green-400);
    --bg-expense: var(--color-red-900);
    --text-expense: var(--color-red-400);
}

body,
button,
input,
select,
option,
textarea {
    font-family: "Inter", monospace;
}

body {
    background-color: var(--background);
    max-width: 1440px;
    margin: 0 auto;
}

